Fixed vertical scrollbar issue

--- a/renderer/css/hotkey.css
+++ b/renderer/css/hotkey.css
@@ -1,11 +1,28 @@
+html,
 body {
-    -webkit-app-region: drag;
-    -webkit-user-select: none;
-    height: 100vh;
-    width: 100vw;
-    overflow-y: hidden;
+  padding: 0;
+  margin: 0;
+  -webkit-app-region: drag;
+  -webkit-user-select: none;
+  height: 100vh;
+  width: 100vw;
+  overflow-y: hidden;
 }
 
-#close-button, .field {
-    -webkit-app-region: no-drag;
+#close-button,
+.field {
+  -webkit-app-region: no-drag;
+}
+
+.hotkey_container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.control {
+  display: inline-block;
 }
